--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -621,6 +621,8 @@ footer{
             justify-content: center;
             align-items: center;
             h3{
+                width: 100%;
+                text-align: center;
                 @include margin__Espaciado(1em,1em);
             }
         }
