--- a/CSS/main.css
+++ b/CSS/main.css
@@ -88,6 +88,159 @@
   transform: skewY(-30deg);
 }
 
+.card {
+  width: 15rem;
+  height: 18rem;
+  display: flex;
+  background: none;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+  border: none;
+  box-shadow: rgba(240, 140, 47, 0.884) 3px 4px 17px;
+  -moz-transition: 2.5s cubic-bezier(0.4, 0.2, 0.2, 1);
+  -webkit-transition: 2.5s cubic-bezier(0.4, 0.2, 0.2, 1);
+  -o-transition: 2.5s cubic-bezier(0.4, 0.2, 0.2, 1);
+  transition: 2.5s cubic-bezier(0.4, 0.2, 0.2, 1);
+}
+.card:hover .card_content {
+  opacity: 1;
+  transform: translateY(0rem);
+}
+.card:hover .dp {
+  transform: translateY(15rem);
+}
+
+.dp {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transition: all 1s ease-in-out;
+}
+.dp .card_title {
+  font-family: "Fugaz One", cursive;
+  color: #E0E0E0;
+  width: 100%;
+  text-align: center;
+}
+
+.card_content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transform: translateY(-15rem);
+  transition: all 1s ease-in-out;
+}
+.card_content .card_paragraph {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #E0E0E0;
+  width: 100%;
+  text-align: center;
+}
+.card_content .contenedor_btn_card {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+.card_content .contenedor_btn_card .btn_card {
+  color: #E0E0E0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 10px 15px;
+  border: 3px solid #E0E0E0;
+  border-radius: 10px;
+}
+.card_content .contenedor_btn_card .btn_card:hover {
+  color: #F76304;
+  animation: pulsate 1s ease-in-out;
+}
+
+@media screen and (max-width: 768px) {
+  .card {
+    width: 12rem;
+    height: 15rem;
+  }
+}
+.carousel {
+  width: 80%;
+  max-width: 1000px;
+}
+
+.carousel_container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.carousel_left, .carousel_right {
+  position: absolute;
+  display: block;
+  width: 30px;
+  height: 30px;
+  border: none;
+  cursor: pointer;
+  line-height: 30px;
+  text-align: center;
+  background: none;
+  color: #E0E0E0;
+  opacity: 20%;
+}
+.carousel_left:hover, .carousel_right:hover {
+  opacity: 100%;
+}
+
+.carousel_left {
+  left: -30px;
+}
+
+.carousel_right {
+  right: -30px;
+}
+
+.carousel_lista {
+  overflow: hidden;
+  height: 22rem;
+  padding: 2em;
+}
+
+.carousel_elemento {
+  background-color: none;
+}
+
+.carousel_indicadores .glider-dot {
+  display: block;
+  width: 30px;
+  height: 4px;
+  background-color: #E0E0E0;
+  opacity: 0.2;
+  border-radius: 0;
+}
+.carousel_indicadores .glider-dot:hover {
+  opacity: 0.5;
+}
+.carousel_indicadores .glider-dot.active {
+  opacity: 1;
+}
+
+@media screen and (max-width: 750px) {
+  .carousel_left, .carousel_right {
+    top: calc(30% + 25px);
+  }
+}
 * {
   margin: 0;
   padding: 0;
