--- a/SCSS/_cards.scss
+++ b/SCSS/_cards.scss
@@ -8,6 +8,8 @@
     overflow: hidden;
     position: relative;
     border: none;
+    outline: 1px solid $color_gris_claro;
+    outline-offset: -8px;
     box-shadow: rgba(240, 140, 47, 0.884) 3px 4px 17px;
     -moz-transition: 2.5s cubic-bezier(0.4, 0.2, 0.2, 1);
     -webkit-transition: 2.5s cubic-bezier(0.4, 0.2, 0.2, 1);
@@ -74,9 +76,33 @@
         }
     }
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 320px) {
     .card{
-        width: 12rem;
-        height: 15rem;
+        width: 14rem;
+        height: 20rem;
+    }    
+}
+@media screen and (min-width: 480px) {
+    .card{
+        width: 22rem;
+        height: 17rem;
+    }    
+}
+@media screen and (min-width: 768px) {
+    .card{
+        width: 28rem;
+        height: 18rem;
+    }    
+}
+@media screen and (min-width: 900px) {
+    .card{
+        width: 30rem;
+        height: 20rem;
+    }    
+}
+@media screen and (min-width: 1024px) {
+    .card{
+        width: 35rem;
+        height: 20rem;
     }    
 }
