--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1,5 +1,5 @@
 //Imports
-@import "variables", "chevron", "cards", "carousel";
+@import "variables", "chevron", "cards", "carouselBootstrap";
 *{
     margin: 0;
     padding: 0;
