Carousel Responsive y limpieza archivos

--- a/SCSS/_cards.scss
+++ b/SCSS/_cards.scss
@@ -76,7 +76,7 @@
         }
     }
 }
-@media screen and (min-width: 320px) {
+/* @media screen and (min-width: 320px) {
     .card{
         width: 14rem;
         height: 20rem;
@@ -105,4 +105,4 @@
         width: 35rem;
         height: 20rem;
     }    
-}
+} */
