--- a/CSS/main.css
+++ b/CSS/main.css
@@ -170,81 +170,47 @@
   animation: pulsate 1s ease-in-out;
 }
 
-@media screen and (min-width: 320px) {
-  .card {
-    width: 14rem;
-    height: 20rem;
-  }
+/* @media screen and (min-width: 320px) {
+    .card{
+        width: 14rem;
+        height: 20rem;
+    }    
 }
 @media screen and (min-width: 480px) {
-  .card {
-    width: 22rem;
-    height: 17rem;
-  }
+    .card{
+        width: 22rem;
+        height: 17rem;
+    }    
 }
 @media screen and (min-width: 768px) {
-  .card {
-    width: 28rem;
-    height: 18rem;
-  }
+    .card{
+        width: 28rem;
+        height: 18rem;
+    }    
 }
 @media screen and (min-width: 900px) {
-  .card {
-    width: 30rem;
-    height: 20rem;
-  }
+    .card{
+        width: 30rem;
+        height: 20rem;
+    }    
 }
 @media screen and (min-width: 1024px) {
-  .card {
-    width: 35rem;
-    height: 20rem;
-  }
-}
-/* .carousel_container{
-    @include carousel;
-
-}
-.carousel_content{
-    @include carousel;
-}
-.carousel-item{
-    @include carousel;
+    .card{
+        width: 35rem;
+        height: 20rem;
+    }    
 } */
-.carousel_content {
-  margin-left: -3%;
-  padding: 2em;
+.carousel_article {
+  display: flex;
+  align-items: center;
+  width: 90%;
+  justify-content: center;
 }
 
-@media screen and (min-width: 320px) {
-  .carousel_content {
-    margin-left: 2%;
-  }
+.carousel_container {
+  padding: 1em;
 }
-@media screen and (min-width: 480px) {
-  .carousel_content {
-    margin-left: 2%;
-  }
-}
-@media screen and (min-width: 768px) {
-  .carousel_content {
-    margin-left: 12%;
-  }
-}
-@media screen and (min-width: 900px) {
-  .carousel_content {
-    margin-left: 9%;
-  }
-}
-@media screen and (min-width: 1024px) {
-  .carousel_content {
-    margin-left: 15%;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .carousel_content {
-    margin-left: 22%;
-  }
-}
+
 * {
   margin: 0;
   padding: 0;
