--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1,5 +1,5 @@
 //Imports
-@import "variables", "chevron", "cards", "carouselSwipper";
+@import "variables", "chevron", "cards", "carouselSwipper", "adn";
 *{
     margin: 0;
     padding: 0;
@@ -38,7 +38,7 @@ header{
         width: 100%;
         div{
             ul{
-                width: 70%;
+                width: 90%;
                 display: flex;
                 justify-content: space-evenly;
                 list-style: none;
@@ -88,6 +88,7 @@ header{
 .section_presentacion{
     width: 100%;
     display: flex;
+    @include margin__Espaciado(0,2em);
     .contenedor_presentacion{
         width: 100%;
         background-color: inherit;
@@ -95,6 +96,7 @@ header{
         flex-direction: column;
         justify-content: space-between;
         padding: 2em;
+        @include margin__Espaciado(3em,3em);
         .contenedor_presentacion_h1{
             display: flex;
             flex-wrap: wrap;
@@ -102,6 +104,7 @@ header{
             justify-content: flex-start;
             align-items: center;
             font-size: 20px;
+            @include margin__Espaciado(2em,2em);
             .presentacion_h1{
                 color: $color_celeste_oscuro;
                 width: 80%;
@@ -130,6 +133,74 @@ header{
     
     }
 }
+.section_nosotros{
+    @include secciones;
+    @include margin__Espaciado(2em,2em);
+    hr{
+        color: $color_gris_claro;
+        width: 60%;
+        transition: all .35 ease-in-out;
+        @include margin__Espaciado(3em,3em);
+    }
+    article{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 90%;
+        .contenedor_nosotros_quienesSomos,.contenedor_nosotros_Speach{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            width: 60%;
+            @include margin__Espaciado(1em,1em);
+            h2{
+                @include margin__Espaciado(2em,1em);
+                width: 100%;
+                text-align: center;
+                color: $color_celeste_oscuro;
+                font-family: $letra__principal;
+            }
+            p{
+                width: 100%;
+                text-align: left;
+                color: $color_gris_claro;
+                font-family: $letra__secundaria; 
+                @include margin__Espaciado(1em,1em);
+            }
+            span{
+                color: $color_celeste_oscuro;
+                font-family: $letra__principal;
+            }
+        }
+    }
+    .nosotros_valores_container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 90%;
+        .valores_container{
+            width: 100%;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            flex-direction: row;
+            .valores_content{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding: 1em;
+                p{
+                    text-align: center;
+                    color: $color_gris_claro;
+                    font-family: $letra__secundaria;
+                }
+            }
+        }
+    }
+}
 .section_servicios{
     @include secciones;
     @include margin__Espaciado(4em,2em);
@@ -143,7 +214,7 @@ header{
         color: $color_celeste_oscuro;
         width: 100%;
         text-align: center;
-        @include margin__Espaciado(1em,1em);
+        @include margin__Espaciado(2em,1em);
     }
     .container_content_impulso{
         display: flex;
@@ -201,44 +272,6 @@ header{
         }
     }
 }
-.section_nosotros{
-    @include secciones;
-    @include margin__Espaciado(2em,2em);
-    hr{
-        color: $color_gris_claro;
-        width: 60%;
-        transition: all .35 ease-in-out;
-        @include margin__Espaciado(3em,3em);
-    }
-    article{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        width: 90%;
-        div{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            width: 60%;
-            @include margin__Espaciado(1em,1em);
-            h3{
-                width: 100%;
-                text-align: left;
-                color: $color_celeste_oscuro;
-                font-family: $letra__principal;
-            }
-            p{
-                width: 100%;
-                text-align: right;
-                color: $color_gris_claro;
-                font-family: $letra__secundaria; 
-                @include margin__Espaciado(1em,1em);
-            }
-        }
-    }
-}
 .section_contacto{
     @include secciones;
     @include margin__Espaciado(2em,2em);
@@ -265,7 +298,8 @@ header{
         align-items: center;
         padding: 2em;
         border-radius: 20px;
-        box-shadow: rgba(98, 122, 231, 0.884) 3px 4px 17px;
+        box-shadow: rgba(87, 169, 218) 3px 4px 17px;
+        //box-shadow: rgba(98, 122, 231, 0.884) 3px 4px 17px;
         //box-shadow: rgba(240, 140, 47, 0.884) 3px 4px 17px;
         -moz-transition: 2.5s cubic-bezier(0.4, 0.2, 0.2, 1);
         -webkit-transition: 2.5s cubic-bezier(0.4, 0.2, 0.2, 1);
@@ -520,9 +554,12 @@ footer{
         }
     }
     .section_nosotros{
-        .container_nosotros{
-            p{
-                text-align: center;
+        //adn valores
+        .nosotros_valores_container{
+            flex-direction: row;
+            flex-wrap: nowrap;
+            .valores_container{
+                flex-direction: column;
             }
         }
     }
