--- a/CSS/main.css
+++ b/CSS/main.css
@@ -380,6 +380,77 @@
     width: 60%;
   }
 }
+.borderEffects span:nth-child(1) {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: linear-gradient(to right, transparent, #57A9DA);
+  animation: borderEffects1 2s linear infinite;
+}
+.borderEffects span:nth-child(2) {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 3px;
+  background: linear-gradient(to bottom, transparent, #57A9DA);
+  animation: borderEffects2 2s linear infinite;
+  animation-delay: 1s;
+}
+.borderEffects span:nth-child(3) {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: linear-gradient(to left, transparent, #57A9DA);
+  animation: borderEffects3 2s linear infinite;
+}
+.borderEffects span:nth-child(4) {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 3px;
+  background: linear-gradient(to top, transparent, #57A9DA);
+  animation: borderEffects4 2s linear infinite;
+  animation-delay: 1s;
+}
+
+@keyframes borderEffects1 {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+@keyframes borderEffects2 {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(100%);
+  }
+}
+@keyframes borderEffects3 {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+@keyframes borderEffects4 {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -567,6 +638,28 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   color: #57A9DA;
   font-family: "Fugaz One", cursive;
 }
+.section_nosotros .nosotros_valores_title_container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+.section_nosotros .nosotros_valores_title_container h3 {
+  text-align: center;
+  color: #F76304;
+  font-family: "Fugaz One", cursive;
+}
+.section_nosotros .nosotros_valores_title_container .nosotros_valores_paragraph {
+  width: 60%;
+  text-align: left;
+  color: #E0E0E0;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
 .section_nosotros .nosotros_valores_container {
   display: flex;
   justify-content: center;
@@ -577,7 +670,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
 .section_nosotros .nosotros_valores_container .valores_container {
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
   flex-direction: row;
 }
@@ -586,11 +679,15 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   justify-content: center;
   align-items: center;
   padding: 1em;
+  overflow: hidden;
+  position: relative;
 }
 .section_nosotros .nosotros_valores_container .valores_container .valores_content p {
   text-align: center;
   color: #E0E0E0;
   font-family: Arial, Helvetica, sans-serif;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .section_servicios {
@@ -964,12 +1061,23 @@ footer .socialMedia_anchord i:hover, footer .socialMedia_anchord img:hover {
     text-align: center;
   }
 
+  .section_nosotros article .contenedor_nosotros_quienesSomos, .section_nosotros article .contenedor_nosotros_Speach {
+    width: 90%;
+  }
+  .section_nosotros .nosotros_valores_title_container .nosotros_valores_paragraph {
+    width: 90%;
+  }
   .section_nosotros .nosotros_valores_container {
     flex-direction: row;
     flex-wrap: nowrap;
   }
   .section_nosotros .nosotros_valores_container .valores_container {
     flex-direction: column;
+  }
+  .section_nosotros .nosotros_valores_container .valores_container .valores_content {
+    margin-top: 1em;
+    margin-bottom: 1em;
+    min-width: 130px;
   }
 
   .section_contacto .contacto_redesUbicacion {
